fix: avoid direct guava usage in health details